Fix height on IE

--- a/src/styles/_boostrap-sbb-styles.scss
+++ b/src/styles/_boostrap-sbb-styles.scss
@@ -73,6 +73,7 @@ nav {
 
 .company-logo {
   width: 10em;
+  max-height: 50px;
   float: right;
 }
 
